[gd_scene load_steps=2 format=3 uid="uid://vdflmqtyyds8"]

[ext_resource type="Script" uid="uid://c3h27pbdpsitc" path="res://src/ui/hud.gd" id="1_ghijk"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ghijk")

[node name="MainLayout" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerStats" type="VBoxContainer" parent="MainLayout"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 0

[node name="PlayerHealthLabel" type="Label" parent="MainLayout/PlayerStats"]
layout_mode = 2
text = "Player Health"

[node name="PlayerHealthBar" type="ProgressBar" parent="MainLayout/PlayerStats"]
layout_mode = 2
size_flags_vertical = 3
value = 50.0
show_percentage = false

[node name="EnemyStats" type="VBoxContainer" parent="MainLayout"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="EnemyHealthLabel" type="Label" parent="MainLayout/EnemyStats"]
layout_mode = 2
text = "Enemy Health"
horizontal_alignment = 2

[node name="EnemyHealthBar" type="ProgressBar" parent="MainLayout/EnemyStats"]
layout_mode = 2
size_flags_vertical = 3
value = 75.0
show_percentage = false
